Update project by adding databases, profiles, Units and integration Tests, Selinium Tests, Frontend sample and more...

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,8 @@ server:
 spring:
   application:
     name: springboot-microservices-tests
-  datasource:
-    url: jdbc:mysql://localhost:8889/microservices_db
-    username: root
-    password: root
+  profiles:
+    active: @spring.profiles.active@
   jpa:
     hibernate:
       ddl-auto: update
